add firebase auth, login fragment

--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -2,12 +2,12 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_graph"
-    app:startDestination="@id/recipesFragment">
+    app:startDestination="@id/loginFragment">
 
     <fragment
         android:id="@+id/recipeFragment"
         android:name="com.example.weekmenu.feature.recipe.ui.RecipeFragment"
-        android:label="RecipeFragment"></fragment>
+        android:label="RecipeFragment" />
 
     <fragment
         android:id="@+id/recipesFragment"
@@ -16,5 +16,15 @@
         <action
             android:id="@+id/action_recipesFragment_to_recipeFragment"
             app:destination="@id/recipeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.example.weekmenu.feature.login.LoginFragment"
+        android:label="LoginFragment">
+        <action
+            android:id="@+id/action_loginFragment_to_recipesFragment"
+            app:destination="@id/recipesFragment"
+            app:popUpTo="@id/main_graph"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
